# picayune

./: .gitignore  CMakeLists.txt  README.md  TODO.md  example.lang  main.ll
src/: ast.cpp  ast.h  ast.hpp  codegen.cpp  codegen.h  codegen.hpp  interpreter.cpp  interpreter.h  main.cpp  parser.cpp  parser.h  parser.hpp  printer.cpp  printer.h  span.cpp  span.h  span.hpp  storage.cpp  storage.hpp  tast.h  tast.hpp  token.cpp  token.h  token.hpp  tokenizer.cpp  tokenizer.h  tokenizer.hpp  type.hpp  typechecker.cpp  typechecker.h  typechecker.hpp  utils.h  utils.hpp
src/backend/: llvm.cpp  llvm.hpp
src/extra/: printer.cpp  printer.h  printer.hpp
src/printer/: printer.cpp  printer.h  shared.cpp  shared.h  tprinter.cpp  tprinter.h
